Just the banner scetion done with some issues, not responsive yet

--- a/style.css
+++ b/style.css
@@ -15,3 +15,87 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* body style */
+body{
+    background: rgb(255, 255, 255);;
+}
+
+/* banner-container style */
+.banner-container{
+    max-width: 80vw;
+    margin: 0 auto;
+    /* border: 2px solid red; */
+    margin-top: 50px;
+    display: flex;
+}
+.drinks-img-container{
+    width: 50%;
+    margin-top: 4em;
+    /* border: 2px dotted red; */
+    position: relative;
+}
+#banner-img{
+    width: 100%;
+}
+
+.drinks-text-container{
+    width: 50%;
+    padding: 1.5rem;
+    text-align: left;
+}
+.banner-heading{
+    font-size: 4em;
+    font-weight: 800;
+    
+}
+.banner-description{
+    font-size: 1.5em;
+    font-weight: 500;
+    color: rgb(119, 119, 119);
+    margin-top: 1em;
+}
+.banner-btn{
+    margin-top: 2em;
+}
+.banner-btn a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.5em;
+    font-weight: 700;
+    text-align: center;
+}
+.banner-btn button{
+    border: none;
+    padding: 18px 22px;
+    border-radius: 10px;
+    background: linear-gradient(270.00deg, rgb(255, 0, 0) 0%,rgb(255, 137, 56) 100%);
+    
+}
+.rating-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+    position: absolute;
+    bottom:2.3em;
+    left: 7.5em;
+    border-radius: 10px;
+    padding: 1.5em;
+
+box-shadow: 0px 7px 50px 0px rgba(0, 0, 0, 0.06);
+background: rgb(255, 255, 255);
+}
+.star-icon i{
+    background: rgb(255, 200, 80);
+}
+.rating-text h4{
+    font-size: 1.8em;
+    font-weight: 800;
+
+}
+.rating-text p{
+    font-size: 1em;
+    font-weight: 600;
+    color: rgb(119, 119, 119);
+}
